recrusive chmodding wip

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-extra": "^0.30.0",
     "guid": "0.0.12",
     "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "walk-fs": "0.0.2"
   }
 }
