--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create unique, write-once, immutable directories.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard *.js examples/*"
   },
   "keywords": [
     "immutable",
@@ -24,5 +24,8 @@
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "walk-fs": "0.0.2"
+  },
+  "devDependencies": {
+    "standard": "^8.3.0"
   }
 }
